# obstracts

./: .env.example  .env.markdown  .env.obstracts-web  .gitignore  Dockerfile  Dockerfile.deploy  Dockerfile.test  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  run.sh  setup_playwright.sh
.github/workflows/: auto-pr-main-to-staging.yml  deploy-image-production.yml  deploy-image-staging.yml  deploy-images.yml  deploy-production-image.yml  deploy-staging-image.yml  deploy-test-image.yml  run-tests.yml  schemathesis_test.yml  update-dependencies.yml
design/: app-spec.md
google_vision_key/: key.json
obstracts/: asgi.py  settings.py  urls.py  wsgi.py
obstracts/cjob/: arango_view_helper.py  celery.py  helpers.py  obstracts_helpers.py  tasks.py
obstracts/classifier/: __init__.py  apps.py  models.py  tasks.py
obstracts/classifier/migrations/: 0001_initial.py  __init__.py
obstracts/server/: __init__.py  apps.py  arango_helpers.py  autoschema.py  h4fserializers.py  identities.py  md_helper.py  models.py  serializers.py  statistics.py  topics.py  utils.py  views.py
obstracts/server/arango_based_views/: arango_helpers.py  arango_views.py
obstracts/server/migrations/: 0001_initial.py  0002_file_ai_describes_incident_and_more.py  0002_profile_ai_settings_extractions_and_more.py  0002_remove_job_feed_id_remove_job_profile_and_more.py  0003_alter_file_ai_incident_classification.py  0003_alter_profile_aliases_alter_profile_whitelists.py  0003_remove_profile_aliases_remove_profile_whitelists.py  0004_file_feed_file_profile_file_summary_and_more.py  0004_job_errors.py  0005_alter_profile_name.py  (+51 more)
tests/: README.md  add_fakeblog123.py  add_test_blogs.py  add_test_security_blogs.py  add_valid_blogs.py  conftest.py  fake_blog_tests.py  requirements.txt  setup_profiles.py  test_00_add_profiles.py  test_01_add_feeds.py  test_02_add_post.py  test_03_delete_post.py  test_04_delete_feed.py  test_05_post_filters.py  test_08_post_images.py  test_09_post_markdown.py  test_10_post_objects.py  test_11_objects.py  test_99_delete_all.py  tests.env  utils.py
tests/manual/: demo_feeds.md  demo_profiles.md
tests/src/: conftest.py  settings.py  test_classifier_tasks.py  test_md_helper.py  test_models.py  test_tasks.py  test_tasks_helpers.py
tests/st/: .env.schemathesis  docker-compose.yml  hooks.py  test_schemathesis.py
utilities/: README.md  reindex_missing_posts.py  reprocess_posts_on_feeds.py
(+22 files in other folders)
