[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obstracts"
version = "1.1.0"
authors = [
  { name = "dogesec" }
]
maintainers = [
  { name = "dogesec" }
]
description = "Turn any blog into structured threat intelligence."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "celery>=5.4.0; python_version >= '3.8'",
    "psycopg2-binary>=2.9.10",
    "redis",
    "history4feed",
    "dogesec-commons[stixifier]",
    "txt2stix",
    "hyperlink",
    "django>=5.2.1",
    "django-filter>=24.2",
    "django-cors-headers",
    "django-storages[s3]",
    "django-cleanup",
    "gunicorn",
    "requests",

  ]
[project.urls]
Homepage = "https://github.com/muchdogesec/obstracts"
Issues = "https://github.com/muchdogesec/obstracts/issues"
"dogesec HQ" = "https://dogesec.com"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-subtests",
  "pytest-cov",
  "pytest-django",
  "schemathesis",
]
